src/objects/Zoom_User__mdt.object
<CustomObject>
    <description>zoom users and corresponding ids</description>
    <fields>
        <fullName>Meeting_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meeting User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>userId__c</fullName>
        <label>userId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Zoom User</label>
    <pluralLabel>Zoom Users</pluralLabel>
</CustomObject>